# macro

./: .env.example  .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: scheduled-run.yml
config/: default.yaml  github-actions.yaml  macro_sector_exposure.v2.json  stage1_sector_rank_tables.v1.json
data/reference/: industry_master.csv
doc/: code-context.md  manual-run-industry-scores-all-zero.md  open-questions.md  plan.ko.md  plan.md  prd.ko.md  prd.md  program-context.md  repository-orientation.md  sdd.md  strategy.ko.md  strategy.md
macro_screener/: __init__.py
src/data/: macro_screener.sqlite3
src/data/snapshots/: latest.json
src/macro_screener/: __init__.py  cli.py  contracts.py  mvp.py  serialization.py
src/macro_screener/backtest/: __init__.py  calendar.py  engine.py  snapshot_store.py
src/macro_screener/config/: __init__.py  defaults.py  loader.py  types.py
src/macro_screener/data/: __init__.py  dart_client.py  krx_client.py  (+2 more)
src/security/: kis_security_defended.py
tests/: test_contracts.py  test_live_provider_parity.py  test_manual_run_ids.py  test_manual_run_runtime_regressions.py  test_pipeline.py  test_publisher_recent_cleanup.py  test_scheduled_run_config.py  test_screening_views.py  test_stage1.py  test_stage1_sector_artifacts.py  test_stage2.py
tests/unit/: test_cli.py  test_config.py  test_contracts.py  test_dart_client.py  test_krx_client.py  test_macro_client.py  test_phase1_contract_examples.py  test_repo_docstrings.py  test_runner_recent_cleanup.py  test_runtime_policy.py
(+369 files in other folders)
